--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -12,6 +12,10 @@
   <% end %>
 
   <div class="field">
+    <%= f.label :name %><br />
+    <%= f.text_field :name %>
+  </div>
+  <div class="field">
     <%= f.label :account_number %><br />
     <%= f.number_field :account_number %>
   </div>
