Add table border styling

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,10 @@
  *= require_self
  *= require_tree .
  */
+
+table {
+  border-collapse: collapse;
+}
+table, th, td {
+  border: 1px solid #000;
+}
