nl2br and truncate summary

--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -24,7 +24,7 @@
     <td><%= to_money purchase.accepted_total %></td>
     <td><%= check_box_tag("accepted#{purchase.id}", "1", (not purchase.accepted_by_me(current_person).nil?), :disabled=>true) %></td>
     <td><%= check_box_tag("complete#{purchase.id}", "1", purchase.accepted_total == purchase.amount, :disabled=>true) %></td>
-    <td><%= purchase.description %></td>
+    <td><%= truncate(purchase.description, separator: ' ') %></td>
     <td><%= link_to 'Show', purchase %></td>
   </tr>
 <% end %>
