--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,3 +19,16 @@ table {
 table, th, td {
   border: 1px solid #000;
 }
+
+nav {
+  text-align: center;
+}
+
+.body {
+  margin: 0 auto;
+  max-width: 90%
+}
+
+.content table {
+  width: 100%;
+}
