--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<% if Rails.env.development? then %>
+  <div class="modeText">DEVELOPMENT</div>
+<% end %>
 
 <% unless current_person.nil? then %>
 <nav class="mainnav">
