--- a/app/views/people/index.html.haml
+++ b/app/views/people/index.html.haml
@@ -15,7 +15,10 @@
       %td= person.account_number
       %td= person.sort_code
       %td= link_to 'Show', person
-      %td= link_to 'Edit', edit_person_path(person)
+      - if person == current_person then
+        %td= link_to 'Edit', edit_person_path(person)
+      - else
+        %td
 
 %br
 
