Switch to using controller's calculation instead

--- a/app/views/purchases/show.html.haml
+++ b/app/views/purchases/show.html.haml
@@ -41,7 +41,7 @@
 
 - if @purchase.acceptances.count > 0 then
   .pieChart
-    = pie_chart @purchase.acceptances.map {|x| [x.person.name, x.amount]}, library: {is3D: true, pieSliceText: 'label', legend: 'none'}
+    = pie_chart @purchase_acceptances, library: {is3D: true, pieSliceText: 'label', legend: 'none'}
 
 %h3 Change mine
 = render partial: "acceptances/form", locals: {acceptance: @my_acceptance}
