Adds a new 'speculative transactions required to fix' feature
This is because certain people @p--b are absolutely awful at actually
bothering to accept purchases.

It basically assumes that if a purchase is incomplete, then the
debt should be spread equally between the people who haven't yet
accepted it. This isn't the /best/ heuristic in the world, but in
most cases it works just fine.

--- a/app/views/special/debug.html.haml
+++ b/app/views/special/debug.html.haml
@@ -13,6 +13,20 @@
         %td= to
         %td= amount
 
+%h3 Raw(spec)
+%table
+  %tr
+    %th From
+    %th To
+    %th Amount
+  - @dbg[:raw_spec].hash.each do |to, froms|
+    - froms.each do |from, amount|
+      %tr
+        %td= from
+        %td= to
+        %td= amount
+
+
 %h3 Simplifed
 - @dbg[:simplified].each_with_index do |s, i|
   %h4= i
